model + home page

--- a/NewsSiteProj/templates/NewsSiteProj/home.html
+++ b/NewsSiteProj/templates/NewsSiteProj/home.html
@@ -12,9 +12,10 @@
    <h1>{{ post.title}} </h1>
     <p>{{ post.currentDate}}</p>
     <p>{{ post.description}}</p>
+    <p>{{ post.category}}</p>
     <img src="{{ post.image.url}}">
 
-    {% endfor %}
+{% endfor %}
 </body>
 </html>
 
