--- a/NewsSiteProj/templates/NewsSiteProj/detail.html
+++ b/NewsSiteProj/templates/NewsSiteProj/detail.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    {{ post.title }}
-</head>
-<body>
 
-</body>
-</html>
+
+{% extends 'NewsSiteProj/base.html' %}
+{% block content %}
+    {{ post.title }}
+    {{ post.description }}
+    <img src="{{ post.image.url}}">
+
+{% endblock %}
