--- a/NewsSiteProj/templates/NewsSiteProj/home.html
+++ b/NewsSiteProj/templates/NewsSiteProj/home.html
@@ -1,22 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <h1>fjbjbjgnbg</h1>
-</head>
-<body>
+{% extends 'NewsSiteProj/base.html' %}
+{% block content %}
 
 {% for post in posts %}
 
-   <h1>{{ post.title}} </h1>
-    <p>{{ post.currentDate}}</p>
-    <p>{{ post.description}}</p>
-    <p>{{ post.category}}</p>
-    <img src="{{ post.image.url}}">
-    <a href="{% url 'detail' post.id%}">לפרטים נוספים</a>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <div class="container">
+    <div class="row">
+        <div class="col col-md-3">
+            <div class="card h-100">
+                <h1 class="card-body">{{ post.title}}.</h1>
+            </div>
+        </div>
+        <div class="col col-md-9">
+            <div class="card">
+                <h3 class="card-body">{{ post.description}}</h3>>
+            </div>
+            <div class="card">
+
+                <img src="{{ post.image.url}}" style="width: 10rem;">
+                <a href="{% url 'detail' post.id%}">לפרטים נוספים</a>
+            </div>
+        </div>
+    </div>
+    </div>
+
+{#    <div class="card" style="width: 18rem;">#}
+{#    <div class="card-body">#}
+{#    <h1 class="card-title">{{ post.title}}</h1>#}
+{#    <p class="card-text">{{ post.description}}</p>#}
+{#    <img src="{{ post.image.url}}" style="width: 10rem;">#}
+{#    <a href="{% url 'detail' post.id%}">לפרטים נוספים</a>#}
+{#  </div>#}
+{#</div>#}
 
 {% endfor %}
-</body>
-</html>
+
+{% endblock %}
 
