--- a/NewsSiteProj/templates/NewsSiteProj/base.html
+++ b/NewsSiteProj/templates/NewsSiteProj/base.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-         <link rel="stylesheet" href="{%static "NewsSiteProj/custom.css" %}">
+    <link rel="stylesheet" href="{% static "NewsSiteProj/custom.css" %}">
 
     <link rel="icon" type="image/png" href="{% static "NewsSiteProj/logo.png" %}">
 
@@ -48,19 +48,39 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+
             </li>
+
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+
+        <div class="logoutbtn">
+            {% if user.is_authenticated %}
+                Hello {{ user.username }} !
+
+                <form action="{% url 'logoutuser' %}" method="POST">
+                    {% csrf_token %}
+                    <button type="submit">Logout</button>
+                </form>
+            {% else %}
+                <a href="{% url 'signupuser' %}">Sign Up</a>
+                <a href="{% url 'loginuser' %}">Login</a>
+
+            {% endif %}
+        </div>
+        {#        <form class="form-inline my-2 my-lg-0">#}
+        {##}
+        {#            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">#}
+        {#            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>#}
+        {#        </form>#}
     </div>
 </nav>
 
-{% block content %}
 
-{% endblock %}
+<div class="container text-center">
 
+    {% block content %}
+    {% endblock %}
+</div>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
