--- a/NewsSiteProj/static/NewsSiteProj/custom.css
+++ b/NewsSiteProj/static/NewsSiteProj/custom.css
@@ -1,11 +1,11 @@
+/*Base*/
 .navbar-nav .nav-link {
     color: rgba(0,0,0,1) !important;
 }
 
 .navbar-nav .nav-link:hover {
-    color: rgba(0,0,0,.5) !important;
+    color: dodgerblue !important;
 }
-
 body {
     font-family: 'Lato', sans-serif;
 }
