--- a/NewsSiteProj/templates/NewsSiteProj/home.html
+++ b/NewsSiteProj/templates/NewsSiteProj/home.html
@@ -1,40 +1,67 @@
-
-
-
 {% extends 'NewsSiteProj/base.html' %}
 {% load static %}
 {% block content %}
+    <link rel="stylesheet" href="{% static "NewsSiteProj/custom.css" %}">
     {% if user.is_authenticated %}
 
-        <h1 id="postTitle" class="font-weight-bold text-center">News</h1>
+        <div class="postTitle" class="font-weight-bold text-center">News Site</div>
+        <br>
+
+        {#        <div class="categoriesList">#}
+        {#            {% for cat in categories %}#}
+        {#                <button type="button" on onclick="function filter(){#}
+        {#                        {% for post in posts %}#}
+        {#                            {% if post.category.name == cat.name %}#}
+        {#                                <div class="row">#}
+        {#                                <div class="col-sm-12">#}
+        {#                                    <div class="card">#}
+        {#                                        <div class="card-body">#}
+        {#                                            <h2 class="card-title">{{ post.title }}</h2>#}
+        {#                                            <p>{{ post.currentDate }}, {{ post.category.name }}</p>#}
+        {#                                            <h4>{{ post.description|truncatechars:100 }}</h4>#}
+        {#                                            <a href="{% url 'detail' post.id %}" class="btn btn-primary">For more</a>#}
+        {#                                        </div>#}
+        {#                                    </div>#}
+        {#                                </div>#}
+        {#                                </div>#}
+        {#                            {% endif %}#}
+        {#                        {% endfor %}#}
+        {#                "}>#}
+        {#                {{ category.name }}#}
+        {#                </button>#}
+        {#            {% endfor %}#}
+        {#        </div>#}
+
+        <div class="form-group col-md-4">
+            <label for="category">Filter by Category</label>
+            <select id="category" class="form-control" name="category">
+                <option selected>Choose...</option>
+                {% for cat in categories %}
+                    <option value="{{ cat }}">{{ cat }}</option>
+                {% endfor %}
+            </select>
+        </div>
+
 
         <div class="card-group">
             {% for post in posts %}
 
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-sm-12">
                         <div class="card">
                             <div class="card-body">
                                 <h2 class="card-title">{{ post.title }}</h2>
-                                <p>{{ post.currentDate }}</p>
+                                <p>{{ post.currentDate }}, {{ post.category.name }} </p>
+
                                 <h4>{{ post.description|truncatechars:100 }}</h4>
-                                <img src="{{ post.image.url }}" style="width: 10rem;">
-                                <a href="{% url 'detail' post.id %}" class="btn btn-primary">Go somewhere</a>
+                                <a href="{% url 'detail' post.id %}" class="btn btn-primary">For more</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                {#            <div class="card" style="width: 18rem;">#}
-                {#                <div class="card-body">#}
-                {#                    <h1 class="card-title">{{ post.title }}</h1>#}
-                {#                    <p class="card-text">{{ post.description }}</p>#}
-                {#                    <img src="{{ post.image.url }}" style="width: 10rem;">#}
-                {#                    <a href="{% url 'detail' post.id %}">לפרטים נוספים</a>#}
-                {#                </div>#}
-                {#            </div>#}
-
 
             {% endfor %}
+
         </div>
 
 
@@ -42,11 +69,7 @@
         <div>
             <h1>You have to Login/Sign-Up to see the News!</h1>
         </div>
-
-
     {% endif %}
-
-
-
 {% endblock %}
+
 
