--- a/NewsSiteProj/templates/NewsSiteProj/base.html
+++ b/NewsSiteProj/templates/NewsSiteProj/base.html
@@ -1,28 +1,28 @@
-
 {% load static %}
 <!doctype html>
 <html lang="en">
 <head>
     <link rel="stylesheet" href="{% static "NewsSiteProj/custom.css" %}">
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
-  <link rel="icon" type="image/png" href="{% static "NewsSiteProj/Logo.png" %}">
+    <link rel="icon" type="image/png" href="{% static "NewsSiteProj/Logo.png" %}">
 
-  <title>News Site</title>
+    <title>News Site</title>
 </head>
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <img src="{{ 'NewsSiteProj/logo.png' }}" style="width: 10rem;">
 
-    <a class="navbar-brand" href="{% url 'home'%}">Home</a>
+    <a class="navbar-brand" href="{% url 'home' %}">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -34,22 +34,29 @@
                 <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
             </li>
 
-{#            <li class="nav-item dropdown">#}
-{#                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"#}
-{#                   aria-haspopup="true" aria-expanded="false">#}
-{#                    Categories#}
-{#                </a>#}
-{#                <div class="dropdown-menu" aria-labelledby="navbarDropdown">#}
-{#                    <a class="dropdown-item" href="#">Sport</a>#}
-{#                    <a class="dropdown-item" href="#">Business</a>#}
-{#                    <a class="dropdown-item" href="#">Health</a>#}
-{#                    <a class="dropdown-item" href="#">Style</a>#}
-{#                    <div class="dropdown-divider"></div>#}
-{#                    <a class="dropdown-item" href="#">Else</a>#}
-{#                </div>#}
-{#            </li>#}
+            {#            <li class="nav-item dropdown">#}
+            {#                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"#}
+            {#                   aria-haspopup="true" aria-expanded="false">#}
+            {#                    Categories#}
+            {#                </a>#}
+            {#                <div class="dropdown-menu" aria-labelledby="navbarDropdown">#}
+            {#                    <a class="dropdown-item" href="#">Sport</a>#}
+            {#                    <a class="dropdown-item" href="#">Business</a>#}
+            {#                    <a class="dropdown-item" href="#">Health</a>#}
+            {#                    <a class="dropdown-item" href="#">Style</a>#}
+            {#                    <div class="dropdown-divider"></div>#}
+            {#                    <a class="dropdown-item" href="#">Else</a>#}
+            {#                </div>#}
+            {#            </li>#}
         </ul>
+        <div class="adminOptions">
+            {% if user.username == 'admin' %}
+                Create
+                <a href="{% url 'createpost' %}">Post</a>
+                <a href="{% url 'createcategory' %}">Category</a>
 
+            {% endif %}
+        </div>
         <div class="logoutbtn">
             {% if user.is_authenticated %}
                 Hello {{ user.username }} !
