--- a/NewsSiteProj/templates/NewsSiteProj/detail.html
+++ b/NewsSiteProj/templates/NewsSiteProj/detail.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="detail">
         <h4>{{ post.title }}</h4>
-        <h6>{{ post.currentDate }}, {{ post.category.name }}</h6>
+        <h6>Posted: {{ post.currentDate }}, Category: {{ post.category.name }}, Views: {{ post.viewsCounter }}</h6>
         <h6>{{ post.description }}</h6>
     </div>
 
