--- a/NewsSiteProj/templates/NewsSiteProj/home.html
+++ b/NewsSiteProj/templates/NewsSiteProj/home.html
@@ -1,77 +1,100 @@
 {% extends 'NewsSiteProj/base.html' %}
 {% load static %}
+
 {% block content %}
-    <link rel="stylesheet" href="{% static "NewsSiteProj/custom.css" %}">
-    {% if user.is_authenticated %}
 
-        <div class="postTitle" class="font-weight-bold text-center">News Site</div>
-        <br>
+    <link rel="stylesheet" href="{% static "NewsSiteProj/../../static/custom.css" %}">
+    <div class="filterBox">
+        <form method="GET" action=".">
 
-        {#        <div class="categoriesList">#}
-        {#            {% for cat in categories %}#}
-        {#                <button type="button" on onclick="function filter(){#}
-        {#                        {% for post in posts %}#}
-        {#                            {% if post.category.name == cat.name %}#}
-        {#                                <div class="row">#}
-        {#                                <div class="col-sm-12">#}
-        {#                                    <div class="card">#}
-        {#                                        <div class="card-body">#}
-        {#                                            <h2 class="card-title">{{ post.title }}</h2>#}
-        {#                                            <p>{{ post.currentDate }}, {{ post.category.name }}</p>#}
-        {#                                            <h4>{{ post.description|truncatechars:100 }}</h4>#}
-        {#                                            <a href="{% url 'detail' post.id %}" class="btn btn-primary">For more</a>#}
-        {#                                        </div>#}
-        {#                                    </div>#}
-        {#                                </div>#}
-        {#                                </div>#}
-        {#                            {% endif %}#}
-        {#                        {% endfor %}#}
-        {#                "}>#}
-        {#                {{ category.name }}#}
-        {#                </button>#}
-        {#            {% endfor %}#}
-        {#        </div>#}
+            <div class="form-row">
+                <div class="form-group col-md-2 col-lg-2">
+                    <label for="inputEmail4">Published from</label>
+                    <input type="date" class="form-control" id="inputEmail4" name="published_from">
+                </div>
+                <div class="form-group col-md-2 col-lg-2">
+                    <label for="inputPassword4">to</label>
+                    <input type="date" class="form-control" id="inputPassword4" name="published_to">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="inputState">Category</label>
+                    <select id="inputState" class="form-control" name="category_field">
+                        <option selected>Choose...</option>
+                        <option>...</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary">Search</button>
+            </div>
+        </form>
+    </div>
 
-        <div class="form-group col-md-4">
-            <label for="category">Filter by Category</label>
-            <select id="category" class="form-control" name="category">
-                <option selected>Choose...</option>
-                {% for cat in categories %}
-                    <option value="{{ cat }}">{{ cat.name }}</option>
-                {% endfor %}
-            </select>
-        </div>
-
-
-        <div class="card-group">
-            {% for post in posts %}
-
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="card">
-                            <div class="card-body">
-                                <h2 class="card-title">{{ post.title }}</h2>
-                                <p>{{ post.currentDate }}, {{ post.category.name }}</p>
-
-                                <h4>{{ post.description|truncatechars:100 }}</h4>
-                                <h2 class="card-title">{{ post.bla }}</h2>
-
-                                <a href="{% url 'detail' post.id %}" class="btn btn-primary">For more</a>
-                            </div>
+    <div class="card-group">#}
+        {% for post in posts %}
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <h2 class="card-title">{{ post.title }}</h2>
+                            <p>{{ post.currentDate }}, {{ post.category.name }}, {{ post.viewsCounter }}</p>
+                            <h4>{{ post.description|truncatechars:100 }}</h4>
+                            <a href="{% url 'detail' post.id %}" class="btn btn-primary">For more</a>
                         </div>
                     </div>
                 </div>
+            </div>
 
-            {% endfor %}
+        {% endfor %}
 
-        </div>
+    </div>
 
 
-    {% else %}:
-        <div>
-            <h1>You have to Login/Sign-Up to see the News!</h1>
-        </div>
-    {% endif %}
+
+    {#    {% if user.is_authenticated %}#}
+    {##}
+    {#        <div class="postTitle" class="font-weight-bold text-center">News Site</div>#}
+    {#        <br>#}
+    {##}
+
+    {#        <div class="form-group col-md-4">#}
+    {#            <label for="category">Filter by Category</label>#}
+    {#            <select id="category" class="form-control" name="category">#}
+    {#                <option selected>Choose...</option>#}
+    {#                {% for cat in categories %}#}
+    {#                    <option value="{{ cat }}">{{ cat.name }}</option>#}
+    {#                {% endfor %}#}
+    {#            </select>#}
+    {#        </div>#}
+    {##}
+    {##}
+    {#        <div class="card-group">#}
+    {#            {% for post in posts %}#}
+    {##}
+    {#                <div class="row">#}
+    {#                    <div class="col-sm-12">#}
+    {#                        <div class="card">#}
+    {#                            <div class="card-body">#}
+    {#                                <h2 class="card-title">{{ post.title }}</h2>#}
+    {#                                <p>{{ post.currentDate }}, {{ post.category.name }}</p>#}
+    {##}
+    {#                                <h4>{{ post.description|truncatechars:100 }}</h4>#}
+    {#                                <h2 class="card-title">{{ post.bla }}</h2>#}
+    {##}
+    {#                                <a href="{% url 'detail' post.id %}" class="btn btn-primary">For more</a>#}
+    {#                            </div>#}
+    {#                        </div>#}
+    {#                    </div>#}
+    {#                </div>#}
+    {##}
+    {#            {% endfor %}#}
+    {##}
+    {#        </div>#}
+    {##}
+    {##}
+    {#    {% else %}:#}
+    {#        <div>#}
+    {#            <h1>You have to Login/Sign-Up to see the News!</h1>#}
+    {#        </div>#}
+    {#    {% endif %}#}
 {% endblock %}
 
 
