--- a/NewsSiteProj/templates/NewsSiteProj/home.html
+++ b/NewsSiteProj/templates/NewsSiteProj/home.html
@@ -10,17 +10,20 @@
             <div class="form-row">
                 <div class="form-group col-md-2 col-lg-2">
                     <label for="inputEmail4">Published from</label>
-                    <input type="date" class="form-control" id="inputEmail4" name="published_from">
+                    <input type="date" class="form-control" id="inputEmail4" name="date_min">
                 </div>
                 <div class="form-group col-md-2 col-lg-2">
                     <label for="inputPassword4">to</label>
-                    <input type="date" class="form-control" id="inputPassword4" name="published_to">
+                    <input type="date" class="form-control" id="inputPassword4" name="date_max">
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputState">Category</label>
                     <select id="inputState" class="form-control" name="category_field">
                         <option selected>Choose...</option>
-                        <option>...</option>
+                        {% for cat in categories %}
+                            <option value="{{ cat }}"> {{ cat }}</option>
+                        {% endfor %}
+
                     </select>
                 </div>
                 <button type="submit" class="btn btn-primary">Search</button>
