--- a/NewsSiteProj/static/custom.css
+++ b/NewsSiteProj/static/custom.css
@@ -1,13 +1,14 @@
 /*Base*/
 .navbar-nav .nav-link {
-    color: rgba(0,0,0,1) !important;
+    color: rgba(0, 0, 0, 1) !important;
 }
 
 .navbar-nav .nav-link:hover {
     color: dodgerblue !important;
 }
+
 body {
-    background: #777777;
+
     font-family: 'Lato', sans-serif;
 }
 
@@ -20,16 +21,87 @@ body {
     #hometext {
         font-size: 4rem;
     }
+
     #blogdetailtitle {
         font-size: 5rem;
     }
 }
+
 /*Home*/
-.filterBox{
+.filterBox {
     margin-top: 3rem;
 }
 
-.card-group .row .col-sm-12 .card .card-body{
-   width: 100%;
-    height: 100%;
+.card-deck .card-category {
+    font-weight: 500;
+    color: black;
+}
+
+.card-deck .card-title {
+    color: #424040;
+    font-weight: 900;
+}
+
+.card-deck .card-description {
+    color: black;
+    font-weight: 900;
+}
+
+.card-deck .view-detail {
+    color: darkblue;
+}
+
+.card-deck .cardor {
+    /*display: block;*/
+    /*top: 0px;*/
+    /*position: relative;*/
+    /*max-width: 262px;*/
+    /*background-color: #f2f8f9;*/
+    /*border-radius: 4px;*/
+    /*padding: 32px 24px;*/
+    /*margin: 12px;*/
+    /*text-decoration: none;*/
+    /*z-index: 0;*/
+    /*overflow: hidden;*/
+    /*border: 1px solid #f2f8f9;*/
+}
+
+.card-deck .cardor :hover {
+    transition: all 0.2s ease-out;
+    box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
+    top: -4px;
+    /*border: 1px solid #cccccc;*/
+    /*background-color: white;*/
+}
+
+.card-deck .cardor :before {
+    /*content: "";*/
+    /*position: absolute;*/
+    /*z-index: -1;*/
+    /*top: -16px;*/
+    /*right: -16px;*/
+    /*background: #00838d;*/
+    /*height: 32px;*/
+    /*width: 32px;*/
+    /*border-radius: 32px;*/
+    /*transform: scale(2);*/
+    /*transform-origin: 50% 50%;*/
+    /*transition: transform 0.15s ease-out;*/
+}
+
+.card-deck .cardor :hover:before {
+    transform: scale(2.15);
+}
+
+.container #searchbtn {
+    margin-top: 2rem;
+    width: 8rem;
+    height: 2.4rem;
+}
+
+.container .card-deck .card-category {
+    color: dodgerblue;
+    font-weight: bold;
+
+
 }
