--- a/NewsSiteProj/templates/NewsSiteProj/base.html
+++ b/NewsSiteProj/templates/NewsSiteProj/base.html
@@ -20,18 +20,18 @@
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <img src="{{ 'NewsSiteProj/logo.png' }}" style="width: 10rem;">
+    <img src="{% static 'NewsSiteProj/logo.png' %}" style="width: 3rem;">
 
-    <a class="navbar-brand" href="{% url 'home' %}">Home</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+{#    <a class="navbar-brand" href="{% url 'home' %}">Home</a>#}
+{#    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"#}
+{#            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">#}
+{#        <span class="navbar-toggler-icon"></span>#}
+{#    </button>#}
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
 
             {#            <li class="nav-item dropdown">#}
@@ -78,10 +78,9 @@
         {#        </form>#}
     </div>
 </nav>
-
-
-<div class="container text-center">
-
+{#<label class="col-sm-2 control-label">Display Picture</label>#}
+{#<img id="output" name="img" alt="Display Picture" src=""/>#}
+{#<div class="container text-center">#}
     {% block content %}
     {% endblock %}
 </div>
