--- a/NewsSiteProj/templates/NewsSiteProj/createpost.html
+++ b/NewsSiteProj/templates/NewsSiteProj/createpost.html
@@ -1,13 +1,13 @@
-
 {% extends 'NewsSiteProj/base.html' %}
 {% block content %}
-   <h1>Add New Post</h1>
-    <h2>{{ error }}</h2>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">create</button>
-    </form>
-
+    <div class="create_post">
+        <h2>Add New Post</h2>
+        <h2>{{ error }}</h2>
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button class="create_btn" type="submit">create</button>
+        </form>
+    </div>
 
 {% endblock %}
