--- a/NewsSiteProj/static/custom.css
+++ b/NewsSiteProj/static/custom.css
@@ -28,6 +28,11 @@ body {
 }
 
 /*Home*/
+
+/*.img_home{*/
+/*    width: 100%;*/
+/*    height: 280px;*/
+/*}*/
 .filterBox {
     margin-top: 3rem;
 }
@@ -102,6 +107,53 @@ body {
 .container .card-deck .card-category {
     color: dodgerblue;
     font-weight: bold;
+}
 
+.create_post {
+    margin-top: 3rem;
+    text-align: center;
+}
+
+.create_category {
+    margin-top: 3rem;
+    text-align: center;
+}
+
+.editpost{
+    margin-top: 3rem;
+    text-align: center;
+}
+
+.adminOptions {
+    margin-top: .5rem;
+}
+.create_btn {
+    border: 0;
+    line-height: 2.5;
+    padding: 0 20px;
+    font-size: 1rem;
+    text-align: center;
+    color: #fff;
+    text-shadow: 1px 1px 1px #000;
+    border-radius: 10px;
+    background-color: rgba(77, 5, 232, 1);
+    background-image: linear-gradient(to top left,
+                                      rgba(0, 0, 0, .2),
+                                      rgba(25, 181, 254, 1) 30%,
+                                      rgba(0, 0, 0, 0));
+    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+                inset -2px -2px 3px rgba(0, 0, 0, .6);
+}
+
+.create_btn:hover {
+    background-color: rgba(83, 51, 237, 1);
+}
+
+.create_btn:active {
+    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+                inset 2px 2px 3px rgba(0, 0, 0, .6);
+}
+
+.create_form{
 
 }
