--- a/NewsSiteProj/static/detail.css
+++ b/NewsSiteProj/static/detail.css
@@ -1,11 +1,10 @@
 
 .detail {
-    background-image: url(https://images.unsplash.com/photo-1470219556762-1771e7f9427d?ixlib=rb-1.2.1&w=1000&q=80.jpg);
+    background-image: url('background.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     height: 1000px;
-
 }
 
 .detail .detail_body {
