--- a/NewsSiteProj/templates/NewsSiteProj/base.html
+++ b/NewsSiteProj/templates/NewsSiteProj/base.html
@@ -22,17 +22,26 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <img src="{% static 'NewsSiteProj/logo.png' %}" style="width: 3rem;">
 
-{#    <a class="navbar-brand" href="{% url 'home' %}">Home</a>#}
-{#    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"#}
-{#            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">#}
-{#        <span class="navbar-toggler-icon"></span>#}
-{#    </button>#}
+    {#    <a class="navbar-brand" href="{% url 'home' %}">Home</a>#}
+    {#    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"#}
+    {#            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">#}
+    {#        <span class="navbar-toggler-icon"></span>#}
+    {#    </button>#}
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
+
+            <div class="adminOptions">
+                {% if user.username == 'admin' %}
+                    Create
+                    <a href="{% url 'createpost' %}">Post</a>
+                    <a href="{% url 'createcategory' %}">Category</a>
+
+                {% endif %}
+            </div>
 
             {#            <li class="nav-item dropdown">#}
             {#                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"#}
@@ -49,16 +58,10 @@
             {#                </div>#}
             {#            </li>#}
         </ul>
-        <div class="adminOptions">
-            {% if user.username == 'admin' %}
-                Create
-                <a href="{% url 'createpost' %}">Post</a>
-                <a href="{% url 'createcategory' %}">Category</a>
 
-            {% endif %}
-        </div>
         <div class="logoutbtn">
             {% if user.is_authenticated %}
+                <div class="row">
                 Hello {{ user.username }} !
 
                 <form action="{% url 'logoutuser' %}" method="POST">
@@ -70,6 +73,10 @@
                 <a href="{% url 'loginuser' %}">Login</a>
 
             {% endif %}
+
+            </div>
+
+
         </div>
         {#        <form class="form-inline my-2 my-lg-0">#}
         {##}
@@ -81,8 +88,8 @@
 {#<label class="col-sm-2 control-label">Display Picture</label>#}
 {#<img id="output" name="img" alt="Display Picture" src=""/>#}
 {#<div class="container text-center">#}
-    {% block content %}
-    {% endblock %}
+{% block content %}
+{% endblock %}
 </div>
 
 <!-- Optional JavaScript -->
