--- a/NewsSiteProj/static/custom.css
+++ b/NewsSiteProj/static/custom.css
@@ -17,6 +17,9 @@ body {
     color: #C9C8C8;
 }
 
+.logoutbtn .hello_user{
+    margin-top: .5rem;
+}
 @media (min-width: 992px) {
     #hometext {
         font-size: 4rem;
@@ -120,6 +123,14 @@ body {
 }
 
 .editpost{
+    margin-top: 3rem;
+    text-align: center;
+}
+.signup_page {
+    margin-top: 3rem;
+    text-align: center;
+}
+.login_page {
     margin-top: 3rem;
     text-align: center;
 }
